Fixed spacing

--- a/app/assets/stylesheets/components/server.scss
+++ b/app/assets/stylesheets/components/server.scss
@@ -85,7 +85,7 @@
 }
 
 .fa-compass {
-    padding-left: 4px;
+    padding-right: 8px;
 }
 
 #backdrop {
